--- a/CSS/style.css
+++ b/CSS/style.css
@@ -53,16 +53,21 @@ header h1{
   .product-list {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: row;
   }
   
   .product {
-    border: 1px solid #ccc;
+    /* border: 1px solid #ccc; */
     margin: 10px;
     padding: 10px;
+    height:30%;
+    width: 30%;
   }
   
   .product-image {
     text-align: center;
+    height:fit-content;
+    width: fit-content;
   }
   
   .product-image img {
