--- a/CSS/welcome.css
+++ b/CSS/welcome.css
@@ -5,7 +5,7 @@ body{
     margin: 0;
     background: #fff;
     font-family:'Poppins sans-serif';
-    color: #fff;
+    /* color: #fff; */
    
 }
 
